#canary refactor: обновил тесты, убрал секретный ключ, исправил баг с тем что через UI нельзя было отправлять запросы, исправил описание в UI
